--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,5 @@
 @import url(insight/insight.css);
 @import url(about-contabilidade/about.css);
 @import url(differences/differences.css);
+@import url(about/about.css);
+@import url(depoimentos/dep.css);
