--- a/assets/css/typograph/typo.css
+++ b/assets/css/typograph/typo.css
@@ -2,7 +2,7 @@
     font:400 3.250rem/1.0416 "Roboto", sans-serif;
 }
 .font-text-s {
-    font:400 1.5rem/1.15 "Poppins", sans-serif;
+    font:300 1.5rem/1.4 "Poppins", sans-serif;
 }
 .font-text-h2 {
     font:400 2.875rem/0.95 "Roboto", sans-serif;
@@ -13,7 +13,12 @@
 .font-h3-s {
     font:400 2rem/1 "Roboto", sans-serif;
 }
-
+.font-head-h4 {
+    font:300 2.5rem/1 "Roboto", sans-serif;
+}
+.font-head-h5 {
+    font:400 2.5rem/1 "Roboto", sans-serif;
+}
 @media(max-width: 400px ) {
     .font-text-head {
         font-size: 2rem;
