--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,4 @@
 @import url(differences/differences.css);
 @import url(about/about.css);
 @import url(depoimentos/dep.css);
+@import url(costumers/constumers.css);
