--- a/assets/css/about/about.css
+++ b/assets/css/about/about.css
@@ -37,7 +37,7 @@
         gap:40px;
         grid-template-columns:1fr;
     }
-    .sobre img {
+    .sobre .location {
        margin: 0 auto;
     }
     .sobre-content img {
