--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,5 @@
 @import url(costumers/constumers.css);
 @import url(FAQ/faq.css);
 @import url(contact/contact.css);
+@import url(footer/footer.css);
+@import url(anima/anima.css);
