--- a/assets/css/FAQ/faq.css
+++ b/assets/css/FAQ/faq.css
@@ -9,6 +9,7 @@
     background-color:#e7e7e7;
 }
 .FAQ button{
+    font: 400 1rem/1.3 "Roboto", sans-serif;
     display: grid;
     grid-template-columns: auto 1fr auto;
     align-items: center;
@@ -45,6 +46,7 @@
     padding-left: 20px ;
     padding-top: 16px;
     max-width: 80ch;
+    font-family: "Poppins", sans-serif;
 }
 
 .js .answer {
