--- a/assets/css/costumers/constumers.css
+++ b/assets/css/costumers/constumers.css
@@ -75,4 +75,8 @@
         --height: 200px;
         --width: 200px;
     }
+    .costumers {
+        padding-top:40px ;
+        padding-bottom:40px ;
+    }
 }
