--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -104,3 +104,77 @@ img {
         height: auto;
     }
 }
+#popUpMessage {
+    font: 300 1rem/1.2 "Roboto", sans-serif;
+}
+
+
+.whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+}
+
+.whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+}
+
+.whatsapp-button img {
+    width: 50px;
+    height: 50px;
+}
+
+.whatsapp-button a {
+    display: block;
+    transition: transform 0.3s ease;
+}
+
+.whatsapp-button a:hover {
+    transform: scale(1.1);
+}
+
+.chat-box {
+    position: fixed;
+    bottom: 80px; /* Acima do botão do WhatsApp */
+    right: 20px;
+    background-color: #25d366; /* Cor do WhatsApp */
+    color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: "Roboto", sans-serif;
+}
+.chat-box p {
+    margin: 0;
+    font-size: 1.3rem;
+    padding-right: 10px;
+    color: rgb(255, 255, 255);
+}
+.chat-box button {
+    background: none;
+    border: none;
+    color: rgb(255, 0, 0);
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.popUpMessage {
+    font-family: "Roboto", sans-serif;
+    font-size: 2rem;
+}
+@keyframes moveBackground {
+    0% {
+        background-position: 0% 0%; /* Início da posição do fundo */
+    }
+    100% {
+        background-position: 100% 0%; /* Final da posição do fundo */
+    }
+}
