--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -7,9 +7,13 @@ header {
 }
 .icons {
     display: flex;
-    margin-right: 20px;
+    gap: 20px;
 }
 .icons img {
+    width: 100%;
+    height: 100%;
+}
+.icons {
     margin-right: 20px;
 }
 header span {
@@ -21,7 +25,7 @@ header span {
 .menu a::after {
     display: none;
 }
-.menu li,
+.menu li
 a {
     font-size: 1.3rem;
     font-weight: 400;
@@ -121,11 +125,7 @@ header button {
     background-color: black;
 }
 @media (max-width:750px) {
-    header .icons {
-        width: 30px;
-        display: flex;
-        flex-direction: row;
-    }
+    
     header .logo {
         width: 100px;
         height: max-content;
