--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,5 @@
 @import url(about/about.css);
 @import url(depoimentos/dep.css);
 @import url(costumers/constumers.css);
+@import url(FAQ/faq.css);
+@import url(contact/contact.css);
