--- a/assets/css/differences/differences.css
+++ b/assets/css/differences/differences.css
@@ -56,7 +56,10 @@
 }
 
 @media (max-width:600px) {
-
+    .differences {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
     .differences h2 {
         font-size: 2.4rem;
     }
